Webserver: Fix akward arrow buttons on dark mode

--- a/Software/webserver/static/css/style.css
+++ b/Software/webserver/static/css/style.css
@@ -171,4 +171,9 @@ body {
 
 .prevnext {
     font-size: 1.5em;
+    color: var()
+}
+
+.prevnext:disabled {
+    opacity: 0;
 }
